# sphinx-arm

./: CMakeLists.txt  README.md  segment_bench_pext.txt
BST/: BST.h
SSDLog/: SSDLog.h  SSDLog_tests.cpp
benchmark/: CMakeLists.txt  benchmark_extra_bits.cpp  benchmark_get_index_vs_two_phase.cpp  benchmark_load_factor_query_insert.cpp  benchmark_main.cpp  benchmark_mixed.cpp  benchmark_multi_threaded.cpp  benchmark_pext_batch.cpp  benchmark_read_latency2.cpp  benchmark_tail.cpp  benchmark_xdp.cpp  benchmark_zp7.cpp  combined.py  extra_bits.py  lf.py  main_exp.py  main_exp_mem.py  main_exp_mem_ptr.py  main_exp_zipf.py  mem_fpr.py  plot.py  plot_simd_batch.py  reproduce.sh  reproducibility.md  tail.py
benchmark/data-extra-bits/: benchmark_Fleck_ExtraBits1.csv  benchmark_Fleck_ExtraBits2.csv  benchmark_Fleck_ExtraBits4.csv  benchmark_Fleck_ExtraBits6.csv  benchmark_InfiniFilter.csv
benchmark/data-lf/: benchmark_DHT.csv  benchmark_Fleck.csv  benchmark_Perfect_HT.csv  benchmark_RSQF-Static.csv
benchmark/data-memory/: benchmark_DHT.csv  benchmark_InfiniFilter.csv  benchmark_Perfect_HT.csv  benchmark_RSQF.csv  benchmark_Sphinx-Loop.csv  benchmark_Sphinx-ReserveBits4.csv  benchmark_Sphinx.csv  benchmark_XDP.csv
benchmark/data-memory-zipf/: benchmark_DHT.csv  benchmark_InfiniFilter.csv  benchmark_Perfect_HT.csv  benchmark_RSQF.csv  benchmark_Sphinx-Loop.csv  benchmark_Sphinx-ReserveBits4.csv  benchmark_Sphinx.csv
benchmark/data-mt/: throughput_vs_threads_4ReserveBitsssd.csv  throughput_vs_threads_ssd.csv
benchmark/data-optane/: benchmark_InfiniFilter.csv  benchmark_Perfect_HT.csv  benchmark_RSQF.csv  benchmark_Sphinx-Loop.csv  benchmark_Sphinx-ReserveBits4.csv  benchmark_Sphinx.csv
benchmark/data-skew/: read_latency.csv
benchmark/data-ssd/: benchmark_InfiniFilter.csv  benchmark_Perfect_HT.csv  benchmark_RSQF.csv  benchmark_Sphinx-Loop.csv  benchmark_Sphinx-ReserveBits4.csv  benchmark_Sphinx.csv
benchmark/data-ssd-zipf/: benchmark_InfiniFilter.csv  benchmark_Perfect_HT.csv  benchmark_RSQF.csv  benchmark_Sphinx-Loop.csv  benchmark_Sphinx-ReserveBits4.csv  benchmark_Sphinx.csv
benchmark/recorder/: recorder.h
bitset_wrapper/: bitset_wrapper.h
block/: CMakeLists.txt  block.h  block_tests.cpp
buffer_pool2/: buffer_pool2.h  buffer_pool2_tests.cpp
config/: config.h
directory/: directory.h  directory_tests.cpp
extension_block/: extension_block_tests.cpp
hashtable/: hashtable_tests.cpp
lib/ConQueue/: CMakeLists.txt
lib/memento/: CMakeLists.txt  memento.hpp  tmp.txt
lib/xxhash/: CMakeLists.txt
lib/zipfYCSB/: CMakeLists.txt  zipfian_generator.h
payload/: payload.h  payload_tests.cpp
segment/: segment.h  segment_tests.cpp
xdp/: xdp.h
zp7/: CMakeLists.txt  simd_pdep_pext.h  zp7.h
